[project]
name = "question"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "factory-boy>=3.3.3",
    "faker>=24.0.0",
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]